@@ -9,7 +9,6 @@
 #  assigned_to      :integer(4)
 #  name             :string(64)      default(""), not null
 #  access           :string(8)       default("Private")
-#  notes            :string(255)
 #  website          :string(64)
 #  tall_free_phone  :string(32)
 #  phone            :string(32)
@@ -33,7 +32,6 @@ account<%= i %>:
   assigned_to : <%= rand(5) + 1 %>
   name: <%= company = Faker::Company.name %>
   access: Public
-  notes: 
   website: http://www.<%= company.downcase.gsub(/\W/, "") %>.com
   tall_free_phone: 1-800-<%= "%03d-%04d" % [rand(999), rand(9999)] %>
   phone: <%= Faker::PhoneNumber.phone_number %>
