@@ -13,6 +13,22 @@
 #  created_at       :datetime
 #  updated_at       :datetime
 #
+
+# == Schema Information
+# Schema version: 16
+#
+# Table name: comments
+#
+#  id               :integer(4)      not null, primary key
+#  user_id          :integer(4)
+#  commentable_id   :integer(4)
+#  commentable_type :string(255)
+#  private          :boolean(1)
+#  title            :string(255)     default("")
+#  comment          :text
+#  created_at       :datetime
+#  updated_at       :datetime
+#
 <% 
   require "faker"
 
