@@ -9,7 +9,6 @@
 #  assigned_to      :integer(4)
 #  name             :string(64)      default(""), not null
 #  access           :string(8)       default("Private")
-#  notes            :string(255)
 #  website          :string(64)
 #  tall_free_phone  :string(32)
 #  phone            :string(32)
